# mixed_language_library_repro

./: .bazelrc  BUILD.bazel  Makefile  README.md  WORKSPACE
Foo/: Bar.h  Bar.m  Gar.swift
